--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: go
 
 go:
-  - "1.15.2"
+  - "1.16"
 
 install:
-  - go get -u golang.org/x/lint/golint
+  - go install golang.org/x/lint/golint@latest
 
 script:
   - golint -set_exit_status
